test/bad/loops/else01.px

while false do
    skip
else do
    a = 1

print a
